<resources>
    <string name="app_name">AndroidProject</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="already_member">Already a member?</string>
    <string name="forgot_password">Forgot</string>
    <string name="create_account">Create an</string>
    <string name="account">Account</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="code">Code</string>




    <string name="action_phone">Gọi thoại</string>
    <string name="action_videocall">Gọi video</string>
    <string name="action_see_profile">Trang cá nhân</string>
    <string name="action_add_user">Thêm</string>
    <string name="action_notification">Tắt thông báo</string>

    <string name="action_custom_chude">Chủ đề</string>
    <string name="action_custom_emotion">Cảm xúc nhanh</string>
    <string name="action_custom_nickname">Biệt danh</string>
    <string name="action_custom_text_effect">Hiệu ứng từ ngữ</string>
    <string name="action_custom_see_file">Xem file phương tiện, file &amp; liên kết</string>
    <string name="action_custom_message_clip">Xem tin nhắn đã ghim</string>
    <string name="action_custom_find_message">Tìm kiếm trong cuộc trò chuyện</string>
    <string name="action_custom_notification">Thông báo &amp; âm thanh</string>
    <string name="action_custom_notification_volumn">Âm thanh thông báo</string>
    <string name="action_custom_private_chat">Đi đến cuộc trò chuyện bí mật</string>
    <string name="action_custom_create_group">Tạo nhóm chat với %s</string>
    <string name="action_custom_share">Chia sẻ thông tin liên hệ</string>
    <string name="action_custom_notification_read">Thông báo đã đọc</string>
    <string name="action_custom_limit">Hạn chế</string>
    <string name="action_custom_block">Chặn</string>
    <string name="action_custom_report">Báo cáo</string>

    <string name="default_static">Đang bật</string>
    <string name="default_report">Góp ý và báo cáo cuộc trò chuyện</string>

<!--    Nguyen Van Dung -->
    <string name="action_chats">Chats</string>
    <string name="action_calls">Calls</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_news">News</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
</resources>