<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37.33333dp"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="#0C2EDF"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="32sp"
                android:textStyle="normal"
                
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            
            <EditText
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="42.677dp"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/user_name"
                android:autofillHints="autoFill"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_regular"
                android:textSize="16sp"
                android:inputType="text"

                tools:ignore="RtlSymmetry"

                app:layout_constraintTop_toBottomOf="@id/textViewSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="42.677dp"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/password"
                android:autofillHints="autoFill"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_regular"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/hidden"
                android:paddingEnd="16dp"
                android:clickable="true"

                tools:ignore="RtlSymmetry"

                app:layout_constraintTop_toBottomOf="@id/textUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/sign_in_btn"
                android:layout_width="105.333dp"
                android:layout_height="37.333dp"
                android:text="@string/sign_in"
                android:background="@drawable/rounded_button_bg"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#0C2EDF"
                android:fontFamily="@font/inter_extrabold"
                android:layout_marginTop="30dp"

                app:layout_constraintTop_toBottomOf="@id/textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_regular"

                app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/textCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_regular"

                app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>