<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_previos_action"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/baseline_arrow_back_ios_24">

        </ImageView>

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar">
        <RelativeLayout
            android:id="@+id/main_scrollview_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/user_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewGroup"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/circle_c"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="@dimen/text_MAX_Width"
                    android:layout_height="@dimen/text_MAX_Height"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/text_size_large">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_action_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/user_information_layout"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <LinearLayout
                    android:id="@+id/btn_action_Call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="@dimen/iconSize"
                        android:layout_height="@dimen/iconSize"
                        android:background="@drawable/layerlist_action_call"
                        >
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_phone"
                        android:textSize="@dimen/text_size_small"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/app_text_color"
                        >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_action_videoCall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="@dimen/iconSize"
                        android:layout_height="@dimen/iconSize"
                        android:background="@drawable/layerlist_action_video_call"
                        >
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_videocall"
                        android:textSize="@dimen/text_size_small"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/app_text_color"
                        >
                    </TextView>
                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_action_layout"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/title_action_more_custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hành động khác"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/gray"
                    android:textSize="20dp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/btn_action_custom_find_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_custom_find_message"
                    android:textSize="20dp"
                    android:textColor="@color/app_text_color"
                    android:drawableLeft="@drawable/magnifying_glass_solid"
                    android:drawablePadding="20dp"
                    android:padding="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/title_action_privacy_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="Quyền riêng tư"
                    android:textColor="@color/gray"
                    android:textSize="20dp">

                </TextView>

                <TextView
                    android:id="@+id/btn_action_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Huỷ kết bạn"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="#FF0000"
                    android:drawableLeft="@drawable/ic_delete_friend"
                    android:drawablePadding="20dp"
                    android:padding="16dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    >
                </TextView>
            </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>



</RelativeLayout >